--- a/#src/index.html
+++ b/#src/index.html
@@ -4,12 +4,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <title>WebTech</title>
 </head>
 <body>
+<!-- header - hero -->
+<header class="header">
+    <div class="header__fullscreen-body">
+            <div class="header__socials">
+                <div class="container">
+                    <div class="header__socials-wrapper">
+                        <a href="+123456789" class="header__phone">+123 456 789</a>
+                        <nav class="header__socials-nav">
+                            <ul class="header__socials-nav-list">
+                                <li class="header__socials-nav-item">
+                                    <a href="#" class="header__socials-nav-link" target="_blank">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li class="header__socials-nav-item">
+                                    <a href="#" class="header__socials-nav-link" target="_blank">
+                                        <i class="fab fa-dribbble"></i>
+                                    </a>
+                                </li>
+                                <li class="header__socials-nav-item">
+                                    <a href="#" class="header__socials-nav-link" target="_blank">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="header__socials-nav-item">
+                                    <a href="#" class="header__socials-nav-link" target="_blank">
+                                        <i class="fab fa-youtube"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="header__logo-nav">
+                <div class="container">
+                    <div class="header__logo-nav-wrapper">
+                        <div class="header__logo-wrapper">
+                            <div class="header__logo">
+                                <svg width="51" height="30" viewBox="0 0 51 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0)">
+                                    <path d="M21.3229 27.8321H16.8253L10.5914 17.0946C10.2902 16.5781 9.62392 16.3996 9.10496 16.6993C8.586 16.9989 8.40661 17.6621 8.70773 18.1785L14.3074 27.8321H9.7905L2.35209 15.0032L9.7905 2.16791H23.2834L28.1975 10.6419C27.3966 11.3943 26.8905 12.4591 26.8905 13.6387C26.8905 15.9086 28.7485 17.7577 31.0294 17.7577C33.3102 17.7577 35.1682 15.9086 35.1682 13.6387C35.1682 11.3688 33.3102 9.51966 31.0294 9.51966C30.7154 9.51966 30.4143 9.55792 30.1196 9.62168L24.8595 0.541977C24.6609 0.204038 24.3021 0 23.9113 0H9.16262C8.7718 0 8.41302 0.204038 8.22081 0.541977L0.148122 14.4612C-0.0440844 14.7992 -0.0440844 15.2072 0.148122 15.5452L8.22081 29.4644C8.41302 29.8023 8.77821 30.0064 9.16262 30.0064H21.3229C21.9252 30.0064 22.4121 29.5218 22.4121 28.9224C22.4121 28.3167 21.9252 27.8321 21.3229 27.8321ZM31.0358 11.6876C32.1185 11.6876 32.9963 12.5611 32.9963 13.6387C32.9963 14.7163 32.1185 15.5898 31.0358 15.5898C29.953 15.5898 29.0753 14.7163 29.0753 13.6387C29.0753 12.5675 29.953 11.6876 31.0358 11.6876ZM50.1475 14.4612L42.0748 0.541977C41.8762 0.204038 41.5174 0 41.1266 0H28.9663C28.3641 0 27.8772 0.484591 27.8772 1.08395C27.8772 1.68332 28.3641 2.16791 28.9663 2.16791H33.464L39.6979 12.9054C39.8965 13.2561 40.2681 13.4474 40.6397 13.4474C40.8255 13.4474 41.0113 13.4028 41.1843 13.3007C41.7032 13.0011 41.8826 12.3379 41.5815 11.8215L35.9819 2.16791H40.4987L47.9436 14.9968L40.4987 27.8321H27.0058L22.0917 19.3581C22.8926 18.6057 23.3987 17.5409 23.3987 16.3613C23.3987 14.0914 21.5407 12.2423 19.2599 12.2423C16.979 12.2423 15.121 14.0914 15.121 16.3613C15.121 18.6312 16.979 20.4803 19.2599 20.4803C19.5738 20.4803 19.875 20.4421 20.1697 20.3783L25.4361 29.458C25.6283 29.796 25.9935 30 26.3779 30H41.1266C41.5174 30 41.8762 29.796 42.0684 29.458L50.1411 15.5388C50.3397 15.2072 50.3397 14.7928 50.1475 14.4612ZM19.2599 18.3124C18.1771 18.3124 17.2994 17.4389 17.2994 16.3613C17.2994 15.2837 18.1771 14.4102 19.2599 14.4102C20.3427 14.4102 21.2204 15.2837 21.2204 16.3613C21.2204 17.4389 20.3427 18.3124 19.2599 18.3124Z" fill="url(#paint0_linear)"/>
+                                    </g>
+                                    <defs>
+                                    <linearGradient id="paint0_linear" x1="25.1474" y1="0" x2="25.1474" y2="30.0064" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#377DFF"/>
+                                    <stop offset="1" stop-color="#8FBCFF"/>
+                                    </linearGradient>
+                                    <clipPath id="clip0">
+                                    <rect width="50.2941" height="30" fill="white"/>
+                                    </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <div class="header__company-name color-text">WebTech</div>
+                        </div>
+                        <nav class="header__nav">
+                            <ul class="header__nav-list">
+                                <li class="header__nav-item"><a class="header__nav-link" href="#">Home</a></li>
+                                <li class="header__nav-item"><a class="header__nav-link" href="#">Pages</a></li>
+                                <li class="header__nav-item"><a class="header__nav-link" href="#">Services</a></li>
+                                <li class="header__nav-item"><a class="header__nav-link" href="#">Portfolio</a></li>
+                                <li class="header__nav-item"><a class="header__nav-link" href="#">Blog</a></li>
+                                <li class="header__nav-item"><a class="header__nav-link" href="#">Contact Us</a></li>
+                            </ul>
+                        </nav>
+                        <div class="header__burger-btn">
+                            <span class="burger-btn-line"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <section class="header__hero">
+                <div class="container">
+                    <div class="header__hero-title-wrapper">
+                        <span class="header__hero-title-number">01</span>
+                        <h1 class="header__hero-title">The Uniqe Creative<br> <span class="color-text">Design Agency</span></h1>
+                        <p class="header__hero-text">Always on the lookout for the hi-tech advancements. Build not only a product that can sell well, but a platform through which to deliver it.</p>
+                        <div class="header__hero-btn-wrapper">
+                            <a href="#" class="header__hero-btn">Start Now</a>
+                            <a href="#" class="header__hero-btn">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="header__hero-image-wrapper">
+                        <img src="img/hero-man-img.png" alt="" class="header__hero-image">
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</header>
+<!-- /header - hero -->
 
-
+<!-- <script src="https://kit.fontawesome.com/f48a34059e.js" crossorigin="anonymous"></script> -->
 <script src="js/script.min.js"></script>
 </body>
 </html>
