add adaptive for sections: Hero, Works, Features

--- a/#src/index.html
+++ b/#src/index.html
@@ -12,6 +12,9 @@
     <title>WebTech</title>
 </head>
 <body>
+<!-- scroll up button -->
+    <a class="scroll-up-btn"></a>
+<!-- scroll up button -->
 <!-- header hero -->
 <header class="header">
     <div class="header__fullscreen-body">
@@ -100,6 +103,9 @@
                 <div class="header__hero-image-wrapper">
                     <img src="img/hero-man-img.png" alt="" class="header__hero-image">
                 </div>
+            </div>
+            <div class="header__hero-triangle-wrapper">
+                <img src="img/hero-triangle.png" alt="" class="header__hero-triangle-image">
             </div>
         </section>
     </div>
