add sections: Best workers, Reasons

--- a/#src/index.html
+++ b/#src/index.html
@@ -25,22 +25,22 @@
                     <nav class="header__socials-nav">
                         <ul class="header__socials-nav-list">
                             <li class="header__socials-nav-item">
-                                <a href="#" class="header__socials-nav-link" target="_blank">
+                                <a href="#" class="header__socials-nav-link social-icons" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                             </li>
                             <li class="header__socials-nav-item">
-                                <a href="#" class="header__socials-nav-link" target="_blank">
+                                <a href="#" class="header__socials-nav-link social-icons" target="_blank">
                                     <i class="fab fa-dribbble"></i>
                                 </a>
                             </li>
                             <li class="header__socials-nav-item">
-                                <a href="#" class="header__socials-nav-link" target="_blank">
+                                <a href="#" class="header__socials-nav-link social-icons" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                             </li>
                             <li class="header__socials-nav-item">
-                                <a href="#" class="header__socials-nav-link" target="_blank">
+                                <a href="#" class="header__socials-nav-link social-icons" target="_blank">
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </li>
@@ -101,11 +101,11 @@
                     </div>
                 </div>
                 <div class="header__hero-image-wrapper">
-                    <img src="img/hero-man-img.png" alt="" class="header__hero-image">
+                    <img src="img/hero-man-img.png" alt="businessman foto" class="header__hero-image">
                 </div>
             </div>
             <div class="header__hero-triangle-wrapper">
-                <img src="img/hero-triangle.png" alt="" class="header__hero-triangle-image">
+                <img src="img/hero-triangle.png" alt="triangle image" class="header__hero-triangle-image">
             </div>
         </section>
     </div>
@@ -119,25 +119,27 @@
             <div class="works__items-wrapper">
                 <div class="works__item">
                     <div class="works__img-wrapper">
-                    <img src="img/works1.jpg" alt="" class="works__img">
+                    <img src="img/works1.jpg" alt="works foto" class="works__img">
                     </div>
                     <p class="works__description">Planning</p>
                 </div>
-                <div class="works__arrow">
-                    <img src="img/works-arrow1.png" alt="" class="works__arrow-img">
+                <div class="works__arrow works__arrow--first-arrow">
+                    <img src="img/works-arrow1.png" alt="arrow icon" class="works__arrow-img">
+                    <img src="img/works-arrow1_short.png" alt="arrow icon" class="works__arrow-img--short">
                 </div>
                 <div class="works__item">
                     <div class="works__img-wrapper">
-                    <img src="img/works2.jpg" alt="" class="works__img">
+                    <img src="img/works2.jpg" alt="works foto" class="works__img">
                     </div>
                     <p class="works__description">Design</p>
                 </div>
-                <div class="works__arrow works__arrow--top-align">
-                    <img src="img/works-arrow2.png" alt="" class="works__arrow-img">
+                <div class="works__arrow works__arrow--second-arrow">
+                    <img src="img/works-arrow2.png" alt="arrow icon" class="works__arrow-img">
+                    <img src="img/works-arrow2_short.png" alt="arrow icon" class="works__arrow-img--short">
                 </div>
                 <div class="works__item">
                     <div class="works__img-wrapper">
-                    <img src="img/works3.jpg" alt="" class="works__img">
+                    <img src="img/works3.jpg" alt="works foto" class="works__img">
                     </div>
                     <p class="works__description">Development</p>
                 </div>
@@ -223,6 +225,166 @@
     </div>
 </section>
 <!-- /features -->
+<!-- best workers -->
+<section class="workers">
+    <div class="container">
+        <div class="workers__wrapper">
+            <div class="workers__content">
+                <h2 class="workers__title"><span class="color-text">Our </span>Best Workers</h2>
+                <a href="#" class="workers__btn">View Team</a>
+            </div>
+            <div class="workers__card">
+                <div class="workers__img-wrapper">
+                    <a href="#" class="workers__img-link" target="_blank">
+                        <img src="img/workers1.jpg" alt="worker-foto" class="workers__img">
+                    </a>
+                    <nav class="workers__socials-nav">
+                        <ul class="workers__socials-nav-list">
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-telegram-plane"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <span class="workers__name">Gary D. Greenwell</span>
+                <span class="workers__position">Head of SEO</span>
+            </div>
+            <div class="workers__card">
+                <div class="workers__img-wrapper">
+                    <a href="#" class="workers__img-link" target="_blank">
+                        <img src="img/workers2.jpg" alt="worker-foto" class="workers__img">
+                    </a>
+                    <nav class="workers__socials-nav">
+                        <ul class="workers__socials-nav-list">
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-telegram-plane"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <span class="workers__name">Jems W. Phelps</span>
+                <span class="workers__position">UI Designer</span>
+            </div>
+            <div class="workers__card">
+                <div class="workers__img-wrapper">
+                    <a href="#" class="workers__img-link" target="_blank">
+                        <img src="img/workers3.jpg" alt="worker-foto" class="workers__img">
+                    </a>
+                    <nav class="workers__socials-nav">
+                        <ul class="workers__socials-nav-list">
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-telegram-plane"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="workers__socials-nav-item">
+                                <a href="#" class="workers__socials-nav-link social-icons" target="_blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <span class="workers__name">Sharon A. Melton</span>
+                <span class="workers__position">Web Designer</span>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /best workers -->
+<!-- reasons -->
+<section class="reasons">
+    <div class="container">
+        <h2 class="reasons__title"><span class="unbold-text">Few Reasons </span><br><span class="color-text">Why Choose Us</span></h2>
+        <div class="reasons__card">
+            <a href="#" class="reasons__number">.01</a>
+            <span class="reasons__subtitle">Clients</span>
+            <p class="reasons__text">
+                Aliquam eu ante ante. Cras rutrum massa lacinia est lobortis maximus.
+                Integer pellentesque nisl at odio porta iaculis. Vestibulum auctor libero
+                a quam rhoncus.
+            </p>
+        </div>
+        <div class="reasons__card">
+            <a href="#" class="reasons__number">.02</a>
+            <span class="reasons__subtitle">Projects</span>
+            <p class="reasons__text">
+                Aliquam eu ante ante. Cras rutrum massa lacinia est lobortis maximus.
+                Integer pellentesque nisl at odio porta iaculis. Vestibulum auctor libero
+                a quam rhoncus.
+            </p>
+        </div>
+        <div class="reasons__card">
+            <a href="#" class="reasons__number">.03</a>
+            <span class="reasons__subtitle">Reporting & Analysis</span>
+            <p class="reasons__text">
+                Aliquam eu ante ante. Cras rutrum massa lacinia est lobortis maximus.
+                Integer pellentesque nisl at odio porta iaculis. Vestibulum auctor libero
+                a quam rhoncus.
+            </p>
+        </div>
+    </div>
+</section>
+<!-- /reasons -->
 
 <script src="js/script.min.js"></script>
 </body>
