add section Innovation

--- a/#src/index.html
+++ b/#src/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>WebTech</title>
 </head>
 <body>
@@ -231,7 +233,7 @@
         <div class="workers__wrapper">
             <div class="workers__content">
                 <h2 class="workers__title"><span class="color-text">Our </span>Best Workers</h2>
-                <a href="#" class="workers__btn">View Team</a>
+                <a href="#" class="workers__btn button">View Team</a>
             </div>
             <div class="workers__card">
                 <div class="workers__img-wrapper">
@@ -403,7 +405,7 @@
     </div>
 </section>
 <!-- /gallery -->
-<!-- testimonials & realize dream -->
+<!-- testimonials -->
 <section class="testimonials">
     <div class="testimonials__title-wrapper">
         <h2 class="testimonials__title"><span class="color-text">Our </span>Testimonials</h2>
@@ -466,6 +468,24 @@
     </div>
 </section>
 <!-- /testimonials -->
+<!-- innovation -->
+<section class="innovation">
+    <div class="container">
+        <div class="innovation__wrapper">
+            <div class="innovation__content-wrapper">
+                <h2 class="innovation__title decoration-none"><span class="big-title">A New Era of </span><br><span class="color-text medium-title">Innovation</span></h2>
+                <p class="innovation__text">
+                    Always on the lookout for the hi-tech advancements. Build a product that will sell well
+                </p>
+                <div class="innovation__btn-wrapper">
+                    <a href="#" class="innovation__btn button">Start Now</a>
+                    <a href="#" class="innovation__btn button">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /innovation -->
 <script src="js/script.min.js"></script>
 </body>
 </html>
