add section Our News

--- a/#src/index.html
+++ b/#src/index.html
@@ -486,6 +486,59 @@
     </div>
 </section>
 <!-- /innovation -->
+<!-- news -->
+<section class="news">
+    <div class="container">
+        <div class="news__title-wrapper">
+            <h2 class="news__section-title"><span class="color-text">Our </span>News</h2>
+        </div>
+        <div class="news__wrapper">
+            <div class="news__main-item">
+                <div class="news__main-img-wrapper">
+                    <span class="news__label">Software</span>
+                    <img src="img/news-large.jpg" alt="man in VR glasses foto" class="news__main-img">
+                </div>
+                <div class="news__main-content">
+                    <h3 class="news__main-title">Motion Animation And VR Headset</h3>
+                    <span class="news__main-author news-author">emmajohnson</span>
+                    <span class="news__main-date news-date">May 17, 2019</span>
+                    <p class="news__main-text news-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae est accumsan,
+                        efficitur velit eu, ullamcorper sapien. Suspendisse aliquam libero euismod, tempus nisl.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae est accumsan,
+                        efficitur velit eu, ullamcorper sapien. Suspendisse aliquam libero euismod, tempus nisl.
+                        Vivamus bibendum in risus sit amet elementum. Vivamus sodales.
+                    </p>
+                    <a href="#" class="news__main-link">view details</a>
+                </div>
+            </div>
+            <a href="#" class="news__item">
+                <div class="news__img-wrapper">
+                    <span class="news__label">Security</span>
+                    <img src="img/news1sm.jpg" alt="notebook foto" class="news__img">
+                </div>
+                <div class="news__content">
+                    <h3 class="news__title">Awesome Tips to Become CEO Of Big NetWork Startup</h3>
+                    <span class="news__author news-author">emmajohnson</span>
+                    <span class="news__date news-date">May 25, 2019</span>
+                </div>
+            </a>
+            <a href="#" class="news__item">
+                <div class="news__img-wrapper">
+                    <span class="news__label">New</span>
+                    <img src="img/news2sm.jpg" alt="notebook foto" class="news__img">
+                </div>
+                <div class="news__content">
+                    <h3 class="news__title">Top 5 Amazing changing For The Social Media Industry</h3>
+                    <span class="news__author news-author">emmajohnson</span>
+                    <span class="news__date news-date">June 30, 2019</span>
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
+<!-- /news -->
+
 <script src="js/script.min.js"></script>
 </body>
 </html>
