--- a/#src/index.html
+++ b/#src/index.html
@@ -538,7 +538,92 @@
     </div>
 </section>
 <!-- /news -->
-
+<!-- footer -->
+<section class="footer">
+    <div class="container">
+        <div class="footer__content-wrapper">
+            <div class="footer__about-us">
+                <h3 class="footer__title small-title">about us</h3>
+                <p class="footer__about-us-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit
+                    amet turpis venenatis nulla dignissim scelerisque. Ut volutpat maximus ligula.
+                </p>
+                <nav class="footer__socials-nav">
+                    <ul class="footer__socials-nav-list">
+                        <li class="footer__socials-nav-item">
+                            <a href="#" class="footer__socials-nav-link social-icons" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="footer__socials-nav-item">
+                            <a href="#" class="footer__socials-nav-link social-icons" target="_blank">
+                                <i class="fab fa-telegram-plane"></i>
+                            </a>
+                        </li>
+                        <li class="footer__socials-nav-item">
+                            <a href="#" class="footer__socials-nav-link social-icons" target="_blank">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li class="footer__socials-nav-item">
+                            <a href="#" class="footer__socials-nav-link social-icons" target="_blank">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="footer__socials-nav-item">
+                            <a href="#" class="footer__socials-nav-link social-icons" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer__recent-post">
+                <h3 class="footer__title small-title">recent post</h3>
+                <ul class="footer__recent-post-list">
+                    <li class="footer__recent-post-item">
+                        <a href="#" class="footer__recent-post-link">
+                            Motion Animation And VR Headset
+                        </a>
+                    </li>
+                    <li class="footer__recent-post-item">
+                        <a href="#" class="footer__recent-post-link">
+                            Awesome Tips to Become CEO Of Big NetWork Startup
+                        </a>
+                    </li>
+                    <li class="footer__recent-post-item">
+                        <a href="#" class="footer__recent-post-link">
+                            Top 5 Amazing changing For The Social Media Industry
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <address class="footer__contact-us">
+                <h3 class="footer__title small-title">Contact us</h3>
+                <ul class="footer__contact-us-list">
+                    <li class="footer__contact-us-item address">
+                        <span class="footer__contact-us-item-title">Address:</span>
+                        <a href="https://goo.gl/maps/5c3Ezp9yeLncMHGi9" class="footer__contact-us-item-link" target="_blank">53 Hilltop Drive,Tx 79022</a>
+                    </li>
+                    <li class="footer__contact-us-item phone">
+                        <span class="footer__contact-us-item-title">Phone:</span>
+                        <a href="tel:+8063771600" class="footer__contact-us-item-link" target="_blank">806-377-1600</a>
+                    </li>
+                    <li class="footer__contact-us-item mail">
+                        <span class="footer__contact-us-item-title">Mail:</span>
+                        <a href="mailto:example@example.com" class="footer__contact-us-item-link" target="_blank">example@example.com</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+    </div>
+    <div class="footer__copyright">
+        <span class="footer__copyright-text">
+            Copyright © 2021 webtech
+        </span>
+    </div>
+</section>
+<!-- /footer -->
 <script src="js/script.min.js"></script>
 </body>
 </html>
